Updated setup scripts to be more reliable

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "scripts": {
     "install": "./script/setup.sh",
+    "prepare": "./script/prepare.sh",
     "postinstall": "./node_modules/.bin/gulp rebuild"
   },
   "devDependencies": {
