--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
   },
   "dependencies": {
     "bluebird": "^3.4.1",
+    "chalk": "^1.1.3",
     "geopoint": "^1.0.1",
     "lodash": "^4.14.1",
     "osrm": "^5.3.1",
+    "single-line-log": "^1.1.1",
     "turf": "^3.0.14",
     "turf-line-to-polygon": "^0.2.1",
     "yargs": "^4.8.1"
