--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
   },
   "dependencies": {
     "bluebird": "^3.4.1",
+    "body-parser": "^1.17.1",
     "chalk": "^1.1.3",
+    "cors": "^2.8.3",
+    "express": "^4.15.2",
     "geopoint": "^1.0.1",
     "lodash": "^4.14.1",
     "osrm": "^5.3.1",
