--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
   },
   "scripts": {
     "install": "./script/setup.sh",
-    "prepare": "./script/prepare.sh",
-    "postinstall": "./node_modules/.bin/gulp rebuild",
     "start": "node server"
   },
   "devDependencies": {
@@ -53,6 +51,8 @@
     "nyc": "^7.1.0"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.0.0",
+    "axios": "^0.18.0",
     "bluebird": "^3.4.1",
     "body-parser": "^1.17.1",
     "chalk": "^1.1.3",
@@ -61,6 +61,9 @@
     "geopoint": "^1.0.1",
     "lodash": "^4.14.1",
     "osrm": "^5.3.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
+    "request-promise-native": "^1.0.5",
     "single-line-log": "^1.1.1",
     "turf": "^3.0.14",
     "turf-line-to-polygon": "^0.2.1",
