--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@mapbox/polyline": "^1.0.0",
+    "@turf/turf": "^6.3.0",
     "axios": "^0.18.0",
     "bluebird": "^3.4.1",
     "body-parser": "^1.17.1",
@@ -65,7 +66,6 @@
     "request-promise": "^4.2.2",
     "request-promise-native": "^1.0.5",
     "single-line-log": "^1.1.1",
-    "turf": "^3.0.14",
     "turf-line-to-polygon": "^0.2.1",
     "yargs": "^4.8.1"
   },
