issue about memory - remove single-line-log require to solve memory leak issue - add gulp build in dockerfile

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "install": "./script/setup.sh",
-    "start": "node server"
+    "start": "node --max_old_space_size=4096 server"
   },
   "devDependencies": {
     "ava": "^0.15.2",
